@@ -80,6 +80,7 @@ function print_usage(){
   echo "  container                             prints container(s) report"
   echo "  node                                  prints node report(s)"
   echo "  cluster                               print cluster information"
+  echo "  queue                                 prints queue information"
   echo "  logs                                  dump container logs"
   echo "  classpath                             prints the class path needed to"
   echo "                                        get the Hadoop jar and the"
@@ -218,6 +219,9 @@ elif [ "$COMMAND" = "application" ] ||
   set -- $COMMAND $@
 elif [ "$COMMAND" = "node" ] ; then
   CLASS=org.apache.hadoop.yarn.client.cli.NodeCLI
+  YARN_OPTS="$YARN_OPTS $YARN_CLIENT_OPTS"
+elif [ "COMMAND" = "queue" ] ; then
+  CLASS=org.apache.hadoop.yarn.client.cli.QueueCLI
   YARN_OPTS="$YARN_OPTS $YARN_CLIENT_OPTS"
 elif [ "$COMMAND" = "resourcemanager" ] ; then
   CLASSPATH=${CLASSPATH}:$YARN_CONF_DIR/rm-config/log4j.properties
