@@ -213,6 +213,11 @@ goto :eof
   set YARN_OPTS=%YARN_OPTS% %YARN_CLIENT_OPTS%
   goto :eof
 
+:queue
+  set CLASS=org.apache.hadoop.yarn.client.cli.QueueCLI
+  set YARN_OPTS=%YARN_OPTS% %YARN_CLIENT_OPTS%
+  goto :eof
+
 :historyserver
   @echo DEPRECATED: Use of this command to start the timeline server is deprecated. 1>&2
   @echo Instead use the timelineserver command for it. 1>&2
@@ -328,6 +333,7 @@ goto :eof
   @echo   container            prints container(s) report
   @echo   node                 prints node report(s)
   @echo   cluster              print cluster information
+  @echo   queue                prints queue information
   @echo   logs                 dump container logs
   @echo   classpath            prints the class path needed to get the
   @echo                        Hadoop jar and the required libraries
